test/conformance/kuttl/verifyImages/clusterpolicy/standard/empty-image/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: keyed-basic-policy
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
  - name: keyed-basic-rule
    match:
      any:
      - resources:
          kinds:
          - Pod
    verifyImages:
    - imageReferences:
      - '*'
      attestors:
      - entries:
        - keys:
            publicKeys: |-
              -----BEGIN PUBLIC KEY-----
              MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE8nXRh950IZbRj8Ra/N9sbqOPZrfM
[...]
              -----END PUBLIC KEY-----
            rekor:
              url: https://rekor.sigstore.dev
              ignoreTlog: true
              ignoreSCT: true
